Adding the API test cell

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 322,
    "id": "0b0240c4",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 323,
    "id": "1f5ce596",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 324,
    "id": "3b9069b2",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 325,
    "id": "6199790a",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "4                       NaN  "
       ]
      },
-     "execution_count": 287,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 326,
    "id": "eddf244f",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 327,
    "id": "27807666",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 328,
    "id": "75131b1e",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 329,
    "id": "efeec003",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 330,
    "id": "19254116",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 331,
    "id": "34d065c3",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
    "id": "99a9d681",
    "metadata": {},
    "outputs": [
@@ -359,6 +359,8 @@
     }
    ],
    "source": [
+    "# Let's optimize the n_estimators parameter by using a loop to find the best value based on MAE\n",
+    "\n",
     "n_estimators_list = list(range(10, 310, 20))\n",
     "results = []\n",
     "\n",
@@ -386,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "id": "ad2f575f",
    "metadata": {},
    "outputs": [
@@ -417,29 +419,25 @@
     "    format='%Y-%m'\n",
     ")\n",
     "\n",
-    "# Tarihe göre sıralayalım ki çizgiler karışmasın\n",
     "plot_data = plot_data.sort_values('DATE')\n",
     "\n",
-    "# 3. Grafik Çizimi\n",
-    "# -----------------------------------------\n",
     "plt.figure(figsize=(14, 6))\n",
     "\n",
     "plt.plot(plot_data['DATE'], plot_data['Actual'], \n",
     "         label='Actual Values', \n",
     "         color='blue', marker='o', linewidth=2)\n",
     "\n",
-    "# Tahmin Değerleri (Kırmızı)\n",
     "plt.plot(plot_data['DATE'], plot_data['Forecast'], \n",
     "         label='Random Forest Forecast', \n",
     "         color='red', linestyle='--', marker='x', linewidth=2)\n",
     "\n",
-    "# Başlık ve Etiketler\n",
     "plt.title('Random Forest Performance: Actual vs Forecast', fontsize=14)\n",
     "plt.xlabel('DATE')\n",
     "plt.ylabel('INCIDENTS')\n",
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig('forecast.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -799,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 338,
    "id": "df382b78",
    "metadata": {},
    "outputs": [
@@ -814,12 +812,14 @@
    ],
    "source": [
     "mse = mean_squared_error(forecast_df['Actual_Value'], forecast_df['Forecast_Value'])\n",
-    "print(f\"\\nSARIMA Model Mean Squared Error (MSE) on Test Set: {mse:.2f}\")"
+    "print(f\"\\nSARIMA Model Mean Squared Error (MSE) on Test Set: {mse:.2f}\")\n",
+    "\n",
+    "# The MSE value is bigger than Random Forest's MSE, indicating that Random Forest performed better on this dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 339,
    "id": "df829020",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Model başarıyla paketlendi ve 'traffic_accident_model.joblib' olarak kaydedildi.\n"
+      "✅ Model has been packaged successfully and saved as 'traffic_accident_model.joblib'.\n"
      ]
     }
    ],
@@ -836,6 +836,48 @@
     "joblib.dump(rf_model, 'traffic_accident_model.joblib')\n",
     "\n",
     "print(\"✅ Model has been packaged successfully and saved as 'traffic_accident_model.joblib'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "id": "1d4d255c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Success!\n",
+      "Server Response: {'prediction': 31}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# Let's test the url\n",
+    "url = \"https://dps-challenge-okizartici.onrender.com/predict\"\n",
+    "\n",
+    "# Test verisi\n",
+    "data = {\n",
+    "    \"year\": 2021,\n",
+    "    \"month\": 10\n",
+    "}\n",
+    "\n",
+    "try:\n",
+    "    response = requests.post(url, json=data)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        print(\"✅ Success!\")\n",
+    "        print(f\"Server Response: {response.json()}\")\n",
+    "    else:\n",
+    "        print(\"❌ There is en error!\")\n",
+    "        print(f\"Error code: {response.status_code}\")\n",
+    "        print(response.text)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Connection Error: {e}\")"
    ]
   }
  ],
